feat: Flyway, Psql integration - Entities, Repository queries changed - .env changes and application.properties change